--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,118 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
-    <LinearLayout
-        android:id="@+id/ll_main_header"
-        android:elevation="2dp"
-        android:padding="10dp"
-        android:background="@color/colorPrimary"
-        android:orientation="horizontal"
-        android:weightSum="9"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:weightSum="10"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_weight="3"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_label_ma_total"
-                android:textSize="14sp"
-                android:layout_weight="5"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:text="@string/string_title_total"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/tv_value_ma_total"
-                android:textSize="20sp"
-                android:layout_weight="5"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:text="@string/string_value_sample_total"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="parallax">
+                <ImageView
+                    android:padding="8dp"
+                    android:src="@android:drawable/ic_menu_directions"
+                    android:layout_width="?attr/actionBarSize"
+                    android:layout_height="?attr/actionBarSize"/>
+                <TextView
+                    android:id="@+id/tv_app_name_appbar"
+                    android:textSize="18dp"
+                    android:text="@string/app_name"
+                    android:textColor="@color/colorWhite"
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </androidx.appcompat.widget.Toolbar>
+
+            <LinearLayout
+                app:layout_collapseMode="pin"
+                android:layout_marginTop="200dp"
+                android:id="@+id/ll_main_header"
+                android:padding="10dp"
+                android:background="@color/colorPrimary"
+                android:orientation="horizontal"
+                android:weightSum="9"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-        <LinearLayout
-            android:weightSum="10"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_weight="3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_label_ma_debits"
-                android:textSize="14sp"
-                android:layout_weight="5"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:text="@string/string_title_debits"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/tv_value_ma_debits"
-                android:textSize="20sp"
-                android:layout_weight="5"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:text="@string/string_value_sample_debits"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-        <LinearLayout
-            android:weightSum="10"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_weight="3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_label_ma_credits"
-                android:textSize="14sp"
-                android:layout_weight="5"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:text="@string/string_title_credits"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/tv_value_ma_credits"
-                android:textSize="20sp"
-                android:layout_weight="5"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:text="@string/string_value_sample_credits"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </LinearLayout>
-    <ScrollView
-        android:layout_below="@id/ll_main_header"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ListView
-            android:divider="@android:color/darker_gray"
-            android:dividerHeight="0.5dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </ScrollView>
-</RelativeLayout>
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:weightSum="10"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tv_label_ma_total"
+                        android:textSize="14sp"
+                        android:layout_weight="5"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textColor="@color/colorWhite"
+                        android:text="@string/string_title_total"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/tv_value_ma_total"
+                        android:textSize="18sp"
+                        android:layout_weight="5"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textColor="@color/colorWhite"
+                        android:text="@string/string_value_sample_total"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:weightSum="10"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tv_label_ma_debits"
+                        android:textSize="14sp"
+                        android:layout_weight="5"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textColor="@color/colorWhite"
+                        android:text="@string/string_title_debits"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/tv_value_ma_debits"
+                        android:textSize="18sp"
+                        android:layout_weight="5"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textColor="@color/colorWhite"
+                        android:text="@string/string_value_sample_debits"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:weightSum="10"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tv_label_ma_credits"
+                        android:textSize="14sp"
+                        android:layout_weight="5"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textColor="@color/colorWhite"
+                        android:text="@string/string_title_credits"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/tv_value_ma_credits"
+                        android:textSize="18sp"
+                        android:layout_weight="5"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textColor="@color/colorWhite"
+                        android:text="@string/string_value_sample_credits"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+            </LinearLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+    <include layout="@layout/layout_main_include"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
