--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:fitsSystemWindows="true"
     tools:context=".MainActivity">
     <com.google.android.material.appbar.AppBarLayout
+        android:background="@drawable/rounded_corner_bottom_background"
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,14 +16,14 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
             <androidx.appcompat.widget.Toolbar
+                app:layout_collapseMode="pin"
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="parallax">
+                android:layout_height="?attr/actionBarSize">
                 <ImageView
                     android:padding="8dp"
                     android:src="@android:drawable/ic_menu_directions"
@@ -37,13 +38,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </androidx.appcompat.widget.Toolbar>
-
             <LinearLayout
-                app:layout_collapseMode="pin"
+                android:paddingBottom="0dp"
+                app:layout_collapseMode="parallax"
                 android:layout_marginTop="200dp"
                 android:id="@+id/ll_main_header"
-                android:padding="10dp"
-                android:background="@color/colorPrimary"
                 android:orientation="horizontal"
                 android:weightSum="9"
                 android:layout_width="match_parent"
@@ -66,8 +65,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                     <TextView
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:id="@+id/tv_value_ma_total"
                         android:textSize="18sp"
                         android:layout_weight="5"
@@ -96,8 +94,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                     <TextView
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:id="@+id/tv_value_ma_debits"
                         android:textSize="18sp"
                         android:layout_weight="5"
@@ -126,8 +123,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                     <TextView
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:id="@+id/tv_value_ma_credits"
                         android:textSize="18sp"
                         android:layout_weight="5"
