--- a/app/src/main/res/layout/rv_layout_single_item.xml
+++ b/app/src/main/res/layout/rv_layout_single_item.xml
@@ -1,81 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:layout_margin="10sp"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
-        android:elevation="2dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:paddingLeft="10dp"
-        android:paddingBottom="10dp"
+        android:elevation="1dp"
+        android:padding="10dp"
         android:background="@drawable/rounded_corner_background"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <com.google.android.material.chip.Chip
-            android:layout_marginTop="10dp"
-            android:layout_alignParentLeft="true"
+        <ImageView
+            android:src="@drawable/icon_digital_wallet"
             android:id="@+id/rv_item_value_transactions_type"
-            android:textSize="18sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/string_rv_item_transactions_type"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
 
-        <TextView
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/rounded_corner_top_right_background"
-            android:padding="4dp"
-            android:layout_alignParentRight="true"
-            android:id="@+id/rv_item__value_transaction_date"
-            android:layout_marginLeft="16sp"
-            android:text="@string/string_rv_item_transactions_date"
-            android:textSize="10sp"
+        <LinearLayout
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/rv_item_value_transactions_type"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <RelativeLayout
-            android:id="@+id/layout_rv_item_transaction_details"
-            android:layout_below="@id/rv_item_value_transactions_type"
-            android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_marginTop="16dp"
-                android:id="@+id/rv_item__title_transaction_name"
-                android:layout_alignParentLeft="true"
-                android:textSize="10sp"
-                android:text="@string/string_rv_item__title_transaction_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:paddingRight="10dp"
-                android:layout_marginTop="16dp"
-                android:layout_alignParentRight="true"
-                android:id="@+id/rv_item__title_transaction_amount"
-                android:textSize="10sp"
-                android:text="@string/string_rv_item__title_transaction_amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
+                android:layout_marginLeft="10dp"
                 android:textStyle="bold"
-                android:layout_below="@id/rv_item__title_transaction_name"
                 android:id="@+id/rv_item__value_transaction_name"
-                android:layout_alignParentLeft="true"
                 android:textSize="14sp"
                 android:text="@string/string_rv_item__value_transaction_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+
             <TextView
-                android:paddingRight="10dp"
-                android:textStyle="bold"
-                android:layout_below="@id/rv_item__title_transaction_amount"
-                android:layout_alignParentRight="true"
-                android:id="@+id/rv_item__value_transaction_amount"
-                android:textSize="20sp"
-                android:text="@string/string_rv_item__value_transaction_amount"
+                android:layout_below="@id/rv_item__value_transaction_name"
+                android:id="@+id/rv_item__value_transaction_date"
+                android:layout_marginLeft="10sp"
+                android:text="@string/string_rv_item_transactions_date"
+                android:textSize="10sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-        </RelativeLayout>
+        </LinearLayout>
+
+        <TextView
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:paddingRight="10dp"
+            android:textStyle="bold"
+            android:id="@+id/rv_item__value_transaction_amount"
+            android:textSize="20sp"
+            android:text="@string/string_rv_item__value_transaction_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
 </RelativeLayout>
