--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     tools:context=".MainActivity">
     <com.google.android.material.appbar.AppBarLayout
-        android:background="@drawable/rounded_corner_bottom_background"
+        android:background="@color/colorPrimary"
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
