--- a/app/src/main/res/layout/rv_layout_single_item.xml
+++ b/app/src/main/res/layout/rv_layout_single_item.xml
@@ -8,20 +8,19 @@
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:elevation="1dp"
         android:padding="10dp"
         android:background="@drawable/rounded_corner_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
-            android:src="@drawable/icon_digital_wallet"
-            android:id="@+id/rv_item_value_transactions_type"
+            android:padding="10dp"
+            android:id="@+id/rv_item_value_transactions_bearer"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
 
         <LinearLayout
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/rv_item_value_transactions_type"
+            android:layout_toRightOf="@id/rv_item_value_transactions_bearer"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
